<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.gouy.MainActivity" >

    <!-- TODO your layout here -->

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/default_name"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_name"
        android:layout_toLeftOf="@+id/et_name"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="33dp"
        android:padding="@dimen/padding"
        android:text="@string/pref"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_pref"
        android:layout_below="@+id/tv_pref"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rd_x1"
            android:layout_width="470dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_pref"
            android:layout_below="@+id/tv_pref"
            android:layout_marginTop="33dp"
            android:layout_weight="0.17"
            android:text="@string/x1"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/rd_x2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_pref"
            android:layout_below="@+id/tv_pref"
            android:layout_marginTop="33dp"
            android:text="@string/x2"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/rd_x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_pref"
            android:layout_below="@+id/tv_pref"
            android:layout_marginTop="33dp"
            android:text="@string/x3"
            android:textSize="@dimen/text_size_medium" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="31dp"
        android:padding="@dimen/padding"
        android:text="@string/from"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />



    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_from"
        android:layout_toRightOf="@+id/tv_from" 
        android:textSize="@dimen/text_size_medium" 
        />
    
   <Button
        android:id="@+id/bu_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:enabled="true"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="100dp"
        android:onClick="onSubmit"
        android:padding="@dimen/padding"
        android:text="@string/submit" />

    <TextView
            android:id="@+id/tv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_toLeftOf="@+id/spinner1"
            android:padding="@dimen/padding"
            android:text="@string/to"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_to"
         android:layout_toRightOf="@+id/tv_to" 
         android:textSize="@dimen/text_size_medium" 
         />
     

</RelativeLayout>